--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-asgiref==3.2.5
-django==3.0.4
+asgiref==3.2.7
+bootstrap4==0.1.0
+Django==3.0.4
+django-crispy-forms==1.9.0
 pytz==2019.3
 sqlparse==0.3.1
